--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+html,
+body {
+    scroll-behavior: smooth;
+}
 
 html {
     font-size: 62.5%;
@@ -50,13 +54,17 @@ a:hover {
 /* ============= Header ============== */
 .fixed-header {
     background: #e6f0ff;
+    padding-top: 20px;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: -20px;
+    z-index: 1;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
-    background-color: #e6f0ff;
+    padding: 18px 0px;
 }
 
 .navbar .logo {
@@ -96,7 +104,7 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     background: #e6f0ff;
-    height: calc(100vh - 76px);
+    height: calc(100vh - 58px);
 }
 
 .hero-wrap .infor {
